--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
@@ -4,6 +4,9 @@ defeat=Defeated
 casualties=Battlefield Casualties
 attacker=Attacker
 defender=Defender
+pause=Pause
+defend=Defend
+magic=Magic
 
 stat_att=Attack Skill
 stat_def=Defense Skill
@@ -13,19 +16,30 @@ stat_hp=Health
 stat_hpMax=Health Left
 stat_speed=Speed
 
+Undead=Undead
+
 Amazon=Amazon
 DH=Demon Hunter
 DH_Upgrade=Valla
 Tyrael=Tyrael
 Jaina=Jaina
 Sylvanas=Sylvanas
+Kerrigan=Queen of blade
+Kerrigan_Upgrade=Kerrigan
 
 battleResult_victory=A glorious victory!\nFor valor in combat, {0} receives {1} experience.
 battleResult_defeat=Your forces suffer a bitter defeat, and {0} abandons your cause.
 
 battleInfo_attack=Attack {0} ({1} danage)
 battleInfo_attack_range=Attack {0} ({1}-{2} damage)
+battleInfo_shoot=Shoot {0} ({1} shots left, {2} damage)
+battleInfo_shoot_range=Shoot {0} ({1} shots left, {2}-{3} damage)
+
 battleInfo_damage=The {0} do {1} damage
-battleInfo_death=, {0} {1} perish
+battleInfo_death=, {0} {1} perish.
+battleInfo_pause=The {0} pause, and wait for a better time to act.
+battleInfo_defend=The {0} takes a defensive stance, and gains +{1} defense skill.
+battleInfo_roundStart=Next round begins.
+
 battleInfo_lifeDrain={0}从{1}吸收了{2}点生命
 battleInfo_lifeDrain_resurrection=，并有{0}个复活了
