稍微弄了下主界面

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Traditional.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Traditional.txt
@@ -15,9 +15,9 @@ stat_hp=剩余生命值
 stat_hpMax=最大生命值
 stat_speed=速度
 Undead=亡灵
-Amazon=战争仕女
+Amazon=戰爭仕女
 DH=猎魔人
-DH_Upgrade=维拉
+DH_Upgrade=維拉
 Tyrael=正义天使
 Jaina=吉安娜
 Sylvanas=希尔瓦娜斯
@@ -37,4 +37,4 @@ battleInfo_roundStart=下一回合开始
 battleInfo_lifeDrain={0}从{1}吸收了{2}点生命
 battleInfo_lifeDrain_resurrection=，并有{0}个复活了
 battleInfo_regeneration={0}的伤口愈合了，并恢复所有生命值
-Crusader_Upgrade=Crusader_Upgrade
+Crusader_Upgrade=喬漢娜
