移动系统优化完毕

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -57,3 +57,6 @@ Regeneration=再生
 Mana drain=法力吸取
 Disease=雷鸣爆弹
 Castle=城镇
+No enemy retaliation=不受反击
+Two retaliations=反击两次
+Unlimited retaliations=无限反击
