加入2234，一些微调

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -48,10 +48,7 @@ Flying=飞行
 Double attack=攻击两次
 Immune to jousting=免疫冲锋
 No melee penalty=近战伤害不减
-No retaliation=不受反击
-Unlimited Retaliations=无限反击
 Life drain=吸血
-Two Retaliations=反击两次
 Teleporting=瞬移
 Regeneration=再生
 Mana drain=法力吸取
@@ -60,3 +57,5 @@ Castle=城镇
 No enemy retaliation=不受反击
 Two retaliations=反击两次
 Unlimited retaliations=无限反击
+Arthas=死亡骑士
+Curse=诅咒
