魔法界面初步完成

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -59,3 +59,18 @@ Two retaliations=反击两次
 Unlimited retaliations=无限反击
 Arthas=死亡骑士
 Curse=诅咒
+MagicMissiles=魔法飞弹
+Magic Missiles=魔法飞弹
+Bestow Hope=希望恩赐
+Magic_Level={0}级
+Magic_Mana=魔法值: {0}
+Oil=浮油
+Armor Of The Archlich=大巫妖护甲
+Rain Of Fire=毁灭之雨
+Crossfade Speed=加速音效
+Blinding Light=致盲之光
+Deploy Shield=护卫
+Blink=闪现
+Ring Of Frost=冰霜之环
+Devouring Maw=吞噬巨口
+Frost Bolt=寒冰箭
