魔法信息栏

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -95,3 +95,8 @@ Earthquake=地震术
 Cancel=取消
 Mana=法力值
 Frost Bolt_Info=从选中的敌方部队身上吸走热量
+AllMagic=所有魔法
+Magic_Combat=战斗魔法
+Magic_Water=水系魔法
+Magic Missiles_Effect=造成10点伤害。
+Magic Missiles_Info=发射一枚魔法飞弹
