--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -105,7 +105,7 @@ Magic_Air=气系魔法
 Magic_Earth=土系魔法
 Magic_All=所有魔法
 Offense=进攻术
-Magic_Travel=旅行魔法
+Magic_Travel=冒险魔法
 Magic_Battle=战斗魔法
 NextPage=下一页
 Magic_Earth_Info=减少释放土系魔法的魔法值消耗。
