文本编辑器全语言同时修改

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -67,7 +67,6 @@ Magic_Mana=魔法值: {0}
 Oil=浮油
 Armor Of The Archlich=大巫妖护甲
 Rain Of Fire=毁灭之雨
-Crossfade Speed=加速音效
 Blinding Light=致盲之光
 Deploy Shield=护卫
 Blink=闪现
@@ -109,3 +108,5 @@ Magic_Travel=冒险魔法
 Magic_Battle=战斗魔法
 NextPage=下一页
 Magic_Earth_Info=减少释放土系魔法的魔法值消耗。
+Speed Boost=加速音效
+Speed Boost_Info=使选中的友方部队速度增加3点。
