--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
@@ -43,3 +43,5 @@ Malthael_Upgrade=Malthael
 Malthael=Angel of Death
 Teleporting=Teleporting
 Magic_Earth_Info=Allows your hero to cast earth spells at reduced cost.
+Speed Boost=Speed Boost
+Speed Boost_Info=Speed Boost_Info
