加入圣灵庇佑技能

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -111,3 +111,4 @@ Magic_Earth_Info=减少释放土系魔法的魔法值消耗。
 Speed Boost=加速音效
 Speed Boost_Info=使选中的友方部队速度增加3点。
 Orphea=奥菲亚
+Bestow Hope_Info=使选中的友方部队总是造成最大伤害
