--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
@@ -46,3 +46,4 @@ Magic_Earth_Info=Allows your hero to cast earth spells at reduced cost.
 Speed Boost=Speed Boost
 Speed Boost_Info=Speed Boost_Info
 Orphea=Orphea
+Bestow Hope_Info=Bestow Hope_Info
