新增底部文本

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Simplified.txt
@@ -6,7 +6,6 @@ attacker=攻击方
 defender=防守方
 pause=等待
 defend=防御
-magic=施法
 stat_att=攻击力
 stat_def=防御力
 stat_damage=杀伤力
@@ -112,3 +111,8 @@ Speed Boost=加速音效
 Speed Boost_Info=使选中的友方部队速度增加3点。
 Orphea=奥菲亚
 Bestow Hope_Info=使选中的友方部队总是造成最大伤害
+Setting=游戏设置
+Surrender=投降
+Retreat=逃跑
+CastSpell=施法
+AutoCombat=自动战斗
