--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
@@ -6,7 +6,6 @@ attacker=Attacker
 defender=Defender
 pause=Pause
 defend=Defend
-magic=Magic
 stat_att=Attack Skill
 stat_def=Defense Skill
 stat_damage=Damage
@@ -47,3 +46,8 @@ Speed Boost=Speed Boost
 Speed Boost_Info=Speed Boost_Info
 Orphea=Orphea
 Bestow Hope_Info=Bestow Hope_Info
+Setting=Setting
+Surrender=Surrender
+Retreat=Retreat
+AutoCombat=AutoCombat
+CastSpell=CastSpell
