--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Traditional.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Traditional.txt
@@ -6,7 +6,6 @@ attacker=攻击方
 defender=防守方
 pause=等待
 defend=防御
-magic=施法
 stat_att=攻击力
 stat_def=防御力
 stat_damage=杀伤力
@@ -42,3 +41,8 @@ Speed Boost=Speed Boost
 Speed Boost_Info=Speed Boost_Info
 Orphea=Orphea
 Bestow Hope_Info=Bestow Hope_Info
+Setting=Setting
+Surrender=Surrender
+Retreat=Retreat
+AutoCombat=AutoCombat
+CastSpell=CastSpell
