按钮设置文本

--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Traditional.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/Chinese_Traditional.txt
@@ -48,3 +48,6 @@ AutoCombat=AutoCombat
 CastSpell=CastSpell
 Cursed Strikes=Cursed Strikes
 Lev=Lev
+EndTurn=EndTurn
+NextHero=NextHero
+MoveHero=MoveHero
