--- a/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
+++ b/Heroes of Mighty and Magic and the Storm/Assets/Resources/Localization/English.txt
@@ -53,3 +53,6 @@ AutoCombat=AutoCombat
 CastSpell=CastSpell
 Cursed Strikes=Cursed Strikes
 Lev=Lev
+EndTurn=EndTurn
+NextHero=NextHero
+MoveHero=MoveHero
